# investment

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: admin.py  auth.py  backtest.py  crisis.py  data.py  portfolio.py  screening.py
backend/app/core/: auth.py  config.py
backend/app/data/: asset_detail.py  crisis.py  crossasset.py  daily_archive.py  dart.py  dart_financials.py  ecos.py  feed.py  financials.py  finnhub.py  foreign_view.py  fundamentals_crawler.py  futuretheme.py  global_intel.py  global_map.py  global_universe.py  growth_scheduler.py  industry.py  industry_research.py  industry_scheduler.py  insight.py  institutional.py  korea_flow.py  lawd_codes.py  livepulse.py  macro.py  market_report.py  money_analysis.py  money_supply.py  moneyflow.py  naver_sector.py  news.py  price_scheduler.py  rates.py  realeconomy.py  realestate.py  rent.py  report.py  report_scheduler.py  (+1 more)
backend/scripts/: audit_report.py  build_blog.py  build_costmodels.py  build_delisting.py  build_separate_fin.py  ingest.py  ingest_fdr.py  ingest_fundamentals.py  monitor.py  verify_parsers.py
backend/tests/: test_cost_ranking.py  test_delisting.py  test_future_value.py  test_imports.py  test_integrity.py  test_joint_costing.py
gui/: README.md  __init__.py  config.py  main.py  pyproject.toml  workers.py
gui/controllers/: __init__.py  screening_controller.py
gui/models/: __init__.py  screening_model.py
gui/services/: __init__.py  api_client.py
gui/views/: __init__.py  screening_view.py
(+195 files in other folders)
